XMLtoCSV/objects/unpackaged/objects/Call_Expense_Account_Validation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Call Expense Account Validation Batch Settings</description>
    <fields>
        <fullName>Non_HCP_Record_Types__c</fullName>
        <description>Non HCP Record Types</description>
        <label>Non HCP Record Types</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Email_List__c</fullName>
        <description>Notification Email</description>
        <label>Notification Email List</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password</description>
        <label>Password</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username</description>
        <label>Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Call Expense Account Validation</label>
</CustomObject>